--- a/ptrproject/package.json
+++ b/ptrproject/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": "npm run build && gh-pages -d dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^6.3.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   },
