--- a/ptrproject/package.json
+++ b/ptrproject/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tailwindcss/cli": "^4.0.9",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "vue": "^3.2.13",
@@ -36,7 +37,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "gh-pages": "^6.3.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "tailwindcss": "^4.0.9"
   },
   "eslintConfig": {
     "root": true,
